force-app/main/default/objects/Covid__c/Covid__c.object-meta.xml
<CustomObject>
    <description>this object is created to fill in records of patients</description>
    <label>Covid 19</label>
    <nameField>
        <label>PNR No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covid 19</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>