force-app/main/default/objects/Covid__c/fields/HID_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>HID_Card_Number__c</fullName>
    <label>HID Card Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>