force-app/main/default/objects/Covid__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <label>Landmark</label>
    <type>TextArea</type>
</CustomField>