force-app/main/default/objects/Covid__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <label>Patient Address</label>
    <type>TextArea</type>
</CustomField>