force-app/main/default/objects/Covid__c/fields/Patient_Age__c.field-meta.xml
<CustomField>
    <fullName>Patient_Age__c</fullName>
    <label>Patient Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>