force-app/main/default/objects/Covid__c/fields/Registered_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Mobile_Number__c</fullName>
    <label>Registered Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>